<resources>
    <string name="app_name">ImplicitIntents</string>
    <string name="edit_text_uri">http://developer.android.com</string>
    <string name="button_uri">Open Website</string>

    <string name="edit_text_loc">Golden Gate Bridge</string>
    <string name="button_loc">Open Location</string>

    <string name="edit_text_share">\'Twas brillig and the slithy toves</string>
    <string name="button_share">Share This Text</string>

    <string name="share_text">Share this text with: </string>
</resources>